# NovaPay

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/recurring_billing/: Cargo.toml
contracts/recurring_billing/src/: lib.rs
server/: .gitignore  manage_db.js  package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: index.ts
server/src/controllers/: auth.controller.ts  notification.controller.ts  payment-link.controller.ts  payment-method.controller.ts  payment-request.controller.ts  profile.controller.ts  send-money.controller.ts  wallet.controller.ts
server/src/middleware/: auth.ts
server/src/routes/: auth.routes.ts  notification.routes.ts  payment-link.routes.ts  payment-method.routes.ts  payment-request.routes.ts  profile.routes.ts  send-money.routes.ts  wallet.routes.ts
server/test/: contracts.test.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/activity/: page.tsx
src/app/login/: page.tsx
src/app/pay/[id]/: page.tsx
src/app/payment-methods/: page.tsx
src/app/payment-mode/: page.tsx
src/app/profile/: page.tsx
src/app/request-money/: page.tsx
src/app/send-money/: page.tsx
src/components/: BenefitsZigzag.tsx  ConnectWalletButton.tsx  Footer.tsx  Hero.tsx  Logo.tsx  Navbar.tsx  ScrollImage.tsx
src/config/: index.ts
src/context/: AuthContext.tsx  WalletContext.tsx
src/lib/: contract.ts  soroban.ts
